wlrexamples: Basic Hello, world example
Wrap jextracted code in convenience functions, log via wlroots logging